--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -80,9 +80,9 @@ jobs:
       - name: Write Terraform Variables
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: |
-          iact_subnet_list=\"$( dig +short @resolver1.opendns.com myip.opendns.com )/32\"]"
+          iact_subnet=$( dig +short @resolver1.opendns.com myip.opendns.com )
           cat <<EOF > github.auto.tfvars
-          iact_subnet_list = ["$iact_subnet_list"]
+          iact_subnet_list = ["$iact_subnet/32"]
           tfe = {
             hostname     = "${{ secrets.TFE_HOSTNAME }}"
             organization = "${{ secrets.TFE_ORGANIZATION }}"
@@ -280,9 +280,9 @@ jobs:
       - name: Write Terraform Variables
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: |
-          iact_subnet_list=\"$( dig +short @resolver1.opendns.com myip.opendns.com )/32\"]"
+          iact_subnet=$( dig +short @resolver1.opendns.com myip.opendns.com )
           cat <<EOF > github.auto.tfvars
-          iact_subnet_list = ["$iact_subnet_list"]
+          iact_subnet_list = ["$iact_subnet/32"]
           tfe = {
             hostname     = "${{ secrets.TFE_HOSTNAME }}"
             organization = "${{ secrets.TFE_ORGANIZATION }}"
@@ -515,9 +515,9 @@ jobs:
       - name: Write Terraform Variables
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: |
-          iact_subnet_list=\"$( dig +short @resolver1.opendns.com myip.opendns.com )/32\"]"
+          iact_subnet=$( dig +short @resolver1.opendns.com myip.opendns.com )
           cat <<EOF > github.auto.tfvars
-          iact_subnet_list = ["$iact_subnet_list"]
+          iact_subnet_list = ["$iact_subnet/32"]
           tfe = {
             hostname     = "${{ secrets.TFE_HOSTNAME }}"
             organization = "${{ secrets.TFE_ORGANIZATION }}"
