--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -342,11 +342,13 @@ jobs:
       - name: Wait For TFE
         id: wait-for-tfe
         timeout-minutes: 25
+        env:
+          HEALTH_CHECK_URL: ${{ steps.retrieve-health-check-url.outputs.stdout }}
         run: |
           echo "Curling \`health_check_url\` for a return status of 200..."
           while ! curl \
             -sfS --max-time 5 --proxy socks5://localhost:5000 \
-             ${{ steps.retrieve-health-check-url.outputs.stdout }}; \
+            $HEALTH_CHECK_URL; \
             do sleep 5; done
 
       - name: Retrieve TFE URL
@@ -563,13 +565,16 @@ jobs:
           export CLOUDSDK_PYTHON_SITEPACKAGES=1
 
       - name: Start SOCKS5 Proxy
+        env:
+          INSTANCE_NAME: ${{ steps.retrieve-instance-name.outputs.stdout }}
+          INSTANCE_ZONE: ${{ steps.retrieve-instance-zone.outputs.stdout }}
         run: |
           gcloud compute ssh \
           --quiet \
           --ssh-key-expire-after="1440m" \
           --tunnel-through-iap \
-          --zone="${{ steps.retrieve-instance-zone.outputs.stdout }}" \
-          "${{ steps.retrieve-instance-name.outputs.stdout }}" \
+          --zone="$INSTANCE_ZONE" \
+          "$INSTANCE_NAME" \
           -- \
           -o 'ServerAliveInterval 5' \
           -o 'ServerAliveCountMax 3' \
@@ -578,11 +583,13 @@ jobs:
       - name: Wait For TFE
         id: wait-for-tfe
         timeout-minutes: 25
+        env:
+          HEALTH_CHECK_URL: ${{ steps.retrieve-health-check-url.outputs.stdout }}
         run: |
           echo "Curling \`health_check_url\` for a return status of 200..."
           while ! curl \
             -sfS --max-time 5 --proxy socks5://localhost:5000 \
-            ${{ steps.retrieve-health-check-url.outputs.stdout }}; \
+            $HEALTH_CHECK_URL; \
             do sleep 5; done
 
       - name: Retrieve TFE URL
